--- a/src/style.css
+++ b/src/style.css
@@ -2,4 +2,102 @@
 * {
   font-family: 'Inter', sans-serif;
   margin: 0;
+  color: #2B283A;
+}
+
+body {
+  background: #E5E5E5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.app {
+  width: 550px;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #F55A5A;
+  padding: 17px; 
+  gap: 10px;
+}
+
+section {
+  background: white;
+  padding: 30px 40px 20px 40px;
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 30px;
+  margin: 5px 0 15px 0;
+}
+
+h2 {
+  color: white;
+  font-weight: 500;
+  font-size: 14.4608px;
+  line-height: 18px;
+  letter-spacing: -0.075em;
+  
+}
+
+p {
+  font-size: 10.24px;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+b {
+  font-weight: 700;
+  line-height: 120%;
+}
+
+a {
+  font-weight: 400;
+  font-size: 10.24px;
+  line-height: 12px;
+  text-decoration-line: underline;
+  color: #918E9B;
+}
+
+span {
+  font-weight: 400;
+  font-size: 10.24px;
+  line-height: 12px;
+  letter-spacing: 0.17em;
+  margin: 0 10px 0 4px;
+  text-transform: uppercase;
+}
+
+.markerIcon {
+  margin-bottom: -1px;
+}
+
+.post {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #F5F5F5;
+  margin-top: 15px;
+  padding-bottom: 15px;
+}
+
+.post:last-child {
+  border: none;
+}
+
+.post-img {
+  width: 125px;
+  height: 168px;
+  border-radius: 5px;
+  margin-right: 20px;
+}
+
+.description {
+  margin-top: 5px;
 }
